syntax = "proto3";

package auth;

// User messages
message User {
  string id = 1;
  string email = 2;
  string name = 3;
  string avatar = 4;
  string bio = 5;
  string status = 6;
  bool emailVerified = 7;
  string createdAt = 8;
  string updatedAt = 9;
  repeated string interests = 10;
  repeated string photos = 11;
  string gender = 12;
  string birthday = 13;
}

message AccessToken {
  string token = 1;
  int64 expire_time = 2;
}

// Authentication messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
  AccessToken access_token = 4;
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string user_name = 3;
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
  string token = 4;
}

message VerifyEmailOtpRequest {
  string otpCode = 1;
}

message VerifyEmailOtpResponse {
  int32 code = 1;
  string message = 2;
  User user = 3;
}